# basic-http-server-rust

./: .gitignore  Cargo.toml  config.json
core/: Cargo.toml
core/src/: lib.rs  route.rs
core/src/controller/: fake_controller.rs  mod.rs  request_controller.rs  route_controller.rs
core/src/route/: mod.rs
core_macros/: Cargo.toml
core_macros/src/: lib.rs
core_macros/tests/: route_macro_test.rs
http/: Cargo.toml
http/src/: lib.rs  query_params.rs  request.rs  request_handler.rs  response.rs  route.rs
server/: Cargo.toml
server/src/: request.rs
src/: main.rs
src/controllers/: home_controller.rs  mod.rs
src/server/: mod.rs  query_params.rs  request.rs  response.rs  route.rs
